# cmd/api/main.go
@@ -2,17 +2,16 @@ package main
 
 import (
 	"fmt"
-	"github.com/go-chi/chi/v5"
-	"github.com/go-chi/chi/v5/middleware"
-	_ "github.com/leonardocartaxo/expenses-analyzer/docs" // docs is generated by Swag CLI, you have to import it.
+	"github.com/gin-gonic/gin"
+	_ "github.com/leonardocartaxo/expenses-analyzer/docs"
 	"github.com/leonardocartaxo/expenses-analyzer/internal"
 	"github.com/leonardocartaxo/expenses-analyzer/internal/expense"
 	"github.com/leonardocartaxo/expenses-analyzer/internal/user"
-	httpSwagger "github.com/swaggo/http-swagger/v2"
+	swaggerFiles "github.com/swaggo/files"
+	"github.com/swaggo/gin-swagger"
 	"gorm.io/driver/postgres"
 	"gorm.io/gorm"
 	gormlogger "gorm.io/gorm/logger"
-	"net/http"
 )
 
 // @title           Expenses Analyser
@@ -27,7 +26,7 @@ import (
 // @license.name  Apache 2.0
 // @license.url   http://www.apache.org/licenses/LICENSE-2.0.html
 
-// @host      localhost:3000
+// @host      localhost:8080
 // @BasePath  /
 
 // @externalDocs.description  OpenAPI
@@ -58,21 +57,18 @@ func main() {
 		}
 	}
 
-	userRouter := user.NewRouter(db)
-	r := chi.NewRouter()
-	r.Use(middleware.Logger)
-	r.Get("/docs/*", httpSwagger.Handler(
-		httpSwagger.URL(fmt.Sprintf("http://localhost:%d/docs/doc.json", c.Server.Port)), //The url pointing to API definition
-	))
-	r.Route("/users", userRouter.Route)
-	fmt.Printf("Starting GO API service at %s ...\n", addr)
-	fmt.Println(`
-		 ______     ______        ______     ______   __    
-		/\  ___\   /\  __ \      /\  __ \   /\  == \ /\ \   
-		\ \ \__ \  \ \ \/\ \     \ \  __ \  \ \  _-/ \ \ \  
-		 \ \_____\  \ \_____\     \ \_\ \_\  \ \_\    \ \_\ 
-		  \/_____/   \/_____/      \/_/\/_/   \/_/     \/_/ `)
-	err = http.ListenAndServe(addr, r)
+	var ginMode string
+	if c.Server.Debug {
+		ginMode = gin.DebugMode
+	} else {
+		ginMode = gin.ReleaseMode
+	}
+	gin.SetMode(ginMode)
+	r := gin.Default()
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	users := r.Group("/users")
+	user.NewRouter(db, users).Route()
+	err = r.Run(addr)
 	if err != nil {
 		panic(err)
 	}
